--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "on_truck",
+  "name": "vue-pwa-studio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "concurrently \"node preBuild.js\" \"vue-cli-service serve\"",
+    "build": "concurrently \"node preBuild.js\" \"vue-cli-service build\"",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chokidar": "^3.6.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "fs-extra": "^11.2.0",
+    "register-service-worker": "^1.7.2",
+    "vue": "^3.2.13",
+    "vue-router": "^4.3.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
+    "@vue/cli-service": "5.0.8",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.38",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
+    "tailwindcss": "^3.4.1"
   },
   "eslintConfig": {
     "root": true,
